# TallerDeProgramacion

./: README.md
Sockets/: README.md
Sockets/client_src/: client.cpp  client_implementation.cpp  client_implementation.h  client_protocol.cpp  client_protocol.h
Sockets/common_src/: defs.h
Sockets/server_src/: game_logic.cpp  game_logic.h  server.cpp  server_implementation.cpp  server_implementation.h  server_protocol.cpp  server_protocol.h
TP_Grupal_JazzJackRabbit/: CMakeLists.txt  README.md  config.yaml.example  items.yaml.example  level.yaml.example
TP_Grupal_JazzJackRabbit/docs/: build.sh  client-draw.plantuml  client-protocol.plantuml  client.plantuml  player-action-process.plantuml  server-level.plantuml  server-recv-creation.plantuml  server-recv-jump.plantuml  server-recv-list.plantuml  server-send-gamestate.plantuml  server.md  server.plantuml
TP_Grupal_JazzJackRabbit/sources/: InfoSprites.txt  beachLevelEntities.txt  enemiesOptions.yaml  t.yaml
TP_Grupal_JazzJackRabbit/sources/yaml/: PSYCHEDELIA2.YAML  aiwLevelItems.yaml  beach2.yaml  beachLevelItems.yaml  maps.yaml  psychedelia.yaml  testBeachLevel.yaml
TP_Grupal_JazzJackRabbit/src/client/: actions.cpp  actions.h  backgrounds.h  client.cpp  client.h  client_protocol.cpp  client_protocol.h  colors.h  constants.h  game_information.h  graphics.cpp  graphics.h  guns.h  main.cpp  reciver_client.cpp  reciver_client.h  scoring_table.cpp  scoring_table.h  sender_client.cpp  sender_client.h  sprites_path.h
TP_Grupal_JazzJackRabbit/src/client/choose/: choose.cpp  choose.h  choose_characters.cpp  choose_characters.h  choose_scenery.cpp  choose_scenery.h
TP_Grupal_JazzJackRabbit/src/client/entities/: bullet.cpp  bullet.h  gun.cpp  gun.h
TP_Grupal_JazzJackRabbit/src/client/entities/players/: jazz.cpp  jazz.h  lori.cpp  lori.h  player.cpp  player.h  spaz.cpp  spaz.h
TP_Grupal_JazzJackRabbit/src/client/level_editor/controller/: common_editor.cpp  common_editor.h  create_level.cpp  create_level.h  level_edit.cpp  level_edit.h
TP_Grupal_JazzJackRabbit/src/client/level_editor/model/: camera.cpp  camera.h  colission_checker.cpp  colission_checker.h  events_manager.cpp  events_manager.h  item.h  level_entities.h  level_parser.cpp  level_parser.h
TP_Grupal_JazzJackRabbit/src/client/level_editor/model/palette/: element_reader.cpp  element_reader.h  palette.cpp  palette.h
TP_Grupal_JazzJackRabbit/src/client/level_editor/view/: graphics_level_editor.cpp  graphics_level_editor.h
TP_Grupal_JazzJackRabbit/src/client/menu/: create_file_menu.cpp  create_file_menu.h  cursor_manager.cpp  cursor_manager.h  input_events_manager.cpp  input_events_manager.h  join_menu.cpp  join_menu.h  maps_menu.cpp  maps_menu.h  menu.cpp  menu.h  menu_level_editor.cpp  menu_level_editor.h  menu_options_manager.cpp  menu_options_manager.h  user_name.cpp  user_name.h
TP_Grupal_JazzJackRabbit/src/client/music_manager/: music_manager.cpp  music_manager.h  sounds_map.cpp  sounds_map.h
TP_Grupal_JazzJackRabbit/src/client/renderer_manager/: renderer_manager.cpp  renderer_manager.h
TP_Grupal_JazzJackRabbit/src/common/: clientaction.cpp  clientaction.h  common_agent.cpp  common_agent.h  constant_rate.h  enemy.cpp  enemy.h  entities_names.h  entities_sizes.h  enums.h  gamestate.cpp  gamestate.h  sprites_frames.h
TP_Grupal_JazzJackRabbit/src/common/mapsParser/: map.h  mapsParser.cpp  mapsParser.h
TP_Grupal_JazzJackRabbit/src/server/: config.cpp  config.h  main.cpp  server.cpp  server.h
TP_Grupal_JazzJackRabbit/src/server/gamelogic/: entity.cpp  entity.h  gameloop.cpp  gameloop.h  gamemanager.cpp  gamemanager.h  gamemap.cpp  gamemap.h  level.cpp  level.h  playermap.cpp  playermap.h
TP_Grupal_JazzJackRabbit/src/server/gamelogic/entities/: H_platform.h  animation.h  bridge.h  bullet.h  coin.h  damageable.h  drop.h  edges.h  floatingplatform.h  gun.cpp  gun.h  landscape.h  platform.h  player.cpp  player.h  posionfruit.h  sound.h  spawner.h  spikes.h  stairs.h  static.h  tall_platform.h  testent.h  wandering.h
TP_Grupal_JazzJackRabbit/src/server/net/: acceptor.cpp  acceptor.h  clientiohandler.cpp  clientiohandler.h  clientrecvhandler.h  clientsendhandler.h
TP_Grupal_JazzJackRabbit/tests/: serde_test.cc
Threads/: MakefileThreads  README.md
Threads/client_src/: client.cpp  client_implementation.cpp  client_implementation.h  client_protocol.cpp  client_protocol.h
Threads/common_src/: defs.cpp  defs.h  game_info.cpp  game_info.h
Threads/server_src/: acceptor.cpp  acceptor.h  clients_queues_monitor.cpp  clients_queues_monitor.h  enemy.cpp  enemy.h  game.cpp  game.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server_implementation.cpp  server_implementation.h  server_protocol.cpp  server_protocol.h
